--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,8 @@ License: GPL (>= 3)
 Suggests:
     knitr,
     rmarkdown
+VignetteBuilder:
+    knitr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
